--- a/table.css
+++ b/table.css
@@ -1,6 +1,7 @@
 <style type="text/css">
-#td0 { border-style:solid; border-width:thin; color:red;}
+#td0 { border-style:solid; border-width:thin;}
 #td1 { border-style:none;}
+#td3 { border-style:solid; border-width:thin; padding-left:10px; padding-right:10px; padding-bottom:5px; padding-top:5px;}
 #bu { border-style:solid; border-color:#d920a4; border-radius:4px; border-width:thin; bgcolor:#fff2fb; color:#54013c;}
 #h1 { font-weight:bold; font-size:14; font-family:"맑은 고딕" ;}
 #h2 { font-size:14; font-family:"맑은 고딕" ;}
