--- a/table.css
+++ b/table.css
@@ -2,6 +2,7 @@
 #td0 { border-style:solid; border-width:thin;}
 #td1 { border-style:none;}
 #td3 { border-style:solid; border-width:thin; padding-left:10px; padding-right:10px; padding-bottom:5px; padding-top:5px;}
+#td4 { border-style:solid; border-width:thin; padding-left:5px; padding-right:5px; padding-bottom:2px; padding-top:2px;}
 #bu { border-style:solid; border-color:#d920a4; border-radius:4px; border-width:thin; bgcolor:#fff2fb; color:#54013c;}
 #h1 { font-weight:bold; font-size:14; font-family:"맑은 고딕" ;}
 #h2 { font-size:14; font-family:"맑은 고딕" ;}
